syntax = "proto3";

package album;

option go_package = "golang-gin/grpc/proto";

// Album service definition
service AlbumService {
  // Get all albums
  rpc GetAlbums(GetAlbumsRequest) returns (GetAlbumsResponse);

  // Get album by ID
  rpc GetAlbumByID(GetAlbumByIDRequest) returns (Album);

  // Create a new album
  rpc CreateAlbum(CreateAlbumRequest) returns (Album);
}

// Album message
message Album {
  string id = 1;
  string title = 2;
  string artist = 3;
  double price = 4;
  float tax = 5;
}

// Request/Response messages
message GetAlbumsRequest {}

message GetAlbumsResponse {
  repeated Album albums = 1;
}

message GetAlbumByIDRequest {
  string id = 1;
}

message CreateAlbumRequest {
  string id = 1;
  string title = 2;
  string artist = 3;
  double price = 4;
  float tax = 5;
}
